# infrastructureascode

./: .gitignore  .gitmodules  Makefile  README.md  pelicanconf.py  publishconf.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pelican.yaml
content/: autocon1.md  d2_network_topologies.ipynb  d2_network_topologies.nbdata  first_steps_infrahub_terraform.md  git101.ipynb  git101.nbdata  hello_world.ipynb  hello_world.nbdata  infrahub_terraform.md  jn_test.ipynb  jn_test.nbdata  test.rst  test2.md  yaml_validation.ipynb  yaml_validation.nbdata  yang_ng.md
content/Brief_Byte/: 202007_highlighting_with_grep.md  (+22 more)
output/: archives.html  authors.html  autocon1.html  build-cron-schedule-expression-online.html  calculate-the-logging-level-from-the-verbose-option-count.html  categories.html  cicd-pipeline-to-update-readmemd-with-terraform-docs.html  d2-network-topologies.html  facelifting-for-the-sandboxes.html  first_steps_infrahub_terraform.html  fstringhelp.html  git-bisect.html  git101.html  hello-world.html  highlighting-your-search-with-grep.html  if-you-use-git-log-remember-a-dog.html  index.html  infrahub_terraform.html  jc-converts-linux-command-output-to-json.html  netaut-fs24-lecture-recording.html  nettowel-day.html  nornir-rich-v015.html  nuts-is-listed-as-pytest-plugin.html  nuts-v320.html  pydantics-version-2s-beforevalidator-and-aliaspath.html  python-built-in-next-supports-default-value.html  python-dataclass-decorator.html  python-security-considerations.html  sitemap.xml  tags.html  typer-file-autocompletion-workaround.html  use-dotenv-as-a-configuration-file-for-your-typer-tool.html  video-network-automation-with-cicd.html  wemulate-container.html  yaml_validation.html  yang_ng.html
(+40 files in other folders)
