[tool.poetry]
name = "infrastructureascode"
version = "0.1.0"
description = "Webpage infrastructureascode.ch"
authors = ["ubaumann"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.8.0"
Markdown = "^3.6"
notebook = "^5.7.16"  # Version 6 breaks pelican-jupyter
pelican-jupyter = "^0.10.0"
bash_kernel = "^0.9.3"
pelican-sitemap = "^1.1.0"

[tool.poetry.scripts]
bash_kernel_install = 'bash_kernel.install'

[tool.poetry.dev-dependencies]
blank = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
