[tool.poetry]
name = "infrastructureascode"
version = "0.1.0"
description = "Webpage infrastructureascode.ch"
authors = ["ubaumann"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "4.8.0"
Markdown = "^3.8"
notebook = "^5"  # Version 6 breaks pelican-jupyter
pelican-jupyter = "^0.10.0"
bash_kernel = "^0.10.0"
pelican-sitemap = "^1.2.0"
jinja2 = "3.0.3"

[tool.poetry.scripts]
bash_kernel_install = 'bash_kernel.install'

[tool.poetry.dev-dependencies]
blank = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
